<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_shop"
        android:icon="@mipmap/shop"
        android:iconTintMode="src_atop"
        android:title="@string/title_shop" />

    <item
        android:id="@+id/navigation_leaderboard"
        android:icon="@mipmap/leaderboard"
        android:title="@string/title_lb" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@mipmap/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_friends"
        android:icon="@mipmap/friends"
        android:title="@string/friends" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@mipmap/settings"
        android:title="@string/settings" />



</menu>