<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue_back"
    tools:context="com.example.GoalGuide.LoginActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@mipmap/background_dark_foggy"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/goalGuideDark"
        android:layout_width="241dp"
        android:layout_height="168dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/logo_dark" />

    <TextView
        android:id="@+id/unlockTxtDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/zen_dots"
        android:lineSpacingExtra="8sp"
        android:text="@string/unlock_your_npotencial"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/goalGuideDark"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/goalGuideDark" />

    <TextView
        android:id="@+id/welcomeMesDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/zen_dots"
        android:text="@string/welcome_player"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goalGuideDark" />

    <Button
        android:id="@+id/forgotDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:backgroundTint="#00FFFFFF"
        android:fontFamily="@font/zen_dots"
        android:paddingTop="1dp"
        android:paddingRight="2dp"
        android:text="@string/forgot_password"
        android:textAllCaps="false"
        android:textColor="@color/light_blue_title"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/passDark"
        app:layout_constraintTop_toBottomOf="@+id/passDark" />

    <Button
        android:id="@+id/noAccDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:backgroundTint="#00FFFFFF"
        android:fontFamily="@font/zen_dots"
        android:paddingTop="1dp"
        android:paddingRight="2dp"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textAllCaps="false"
        android:textColor="@color/light_blue_title"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBttDark" />

    <Button
        android:id="@+id/loginBttDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:alpha="0.9"
        android:background="@mipmap/rectangle"
        android:fontFamily="@font/zen_dots"
        android:padding="25sp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/blue_texts"
        android:textSize="16sp"
        app:backgroundTint="@color/light_gray_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passDark" />

    <EditText
        android:id="@+id/usernameDark"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:alpha="0.7"
        android:background="@mipmap/rectangle2"
        android:ems="10"
        android:fontFamily="@font/zen_dots"
        android:hint="@string/enter_username"
        android:inputType="text"
        android:paddingTop="15sp"
        android:paddingBottom="15sp"
        android:textAlignment="center"
        android:textColor="@color/dark_blue_back"
        android:textColorHint="@color/dark_blue_back"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeMesDark" />


    <EditText
        android:id="@+id/passDark"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:alpha="0.7"
        android:background="@mipmap/rectangle2"
        android:ems="10"
        android:fontFamily="@font/zen_dots"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:paddingTop="15sp"
        android:paddingBottom="15sp"
        android:textAlignment="center"
        android:textColor="@color/dark_blue_back"
        android:textColorHint="@color/dark_blue_back"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameDark" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/passDark"
        app:layout_constraintEnd_toEndOf="@+id/passDark"
        app:layout_constraintTop_toTopOf="@+id/passDark"
        app:srcCompat="@mipmap/eye_dark" />

</androidx.constraintlayout.widget.ConstraintLayout>